sumi.grammar
// The Sumi grammar.
//
// This file is the one declaration of the token vocabulary, the node
// vocabulary, and every token class the lexer, the newline rule, the
// parser, and diagnostics derive from them. `cargo xtask codegen`
// regenerates from it:
//
//   crates/lexer/src/generated/mod.rs   SyntaxKind, the keyword and
//                                       punctuation tables, token texts,
//                                       and descriptions
//   crates/syntax/src/generated/mod.rs  NodeKind, the token classes,
//                                       bracket pairs, and operator tables
//   crates/syntax/src/generated/ast.rs  the typed views: a struct per node
//                                       kind with an accessor per labeled
//                                       or rule-typed child, and an enum
//                                       per category
//   docs/reference/generated/grammar.md the grammar reference chapter
//   fuzz/sumi.dict                      the libFuzzer dictionary: every
//                                       fixed token text and compound
//                                       operator, and the lexer's texts
//   crates/test/src/generated/mod.rs    the coverage witnesses: one per
//                                       child a node rule allows, which
//                                       the corpus and the program
//                                       generator must each reach
//
// CI runs `cargo xtask codegen --check` and fails when any of them drifts.
//
// One declaration per line, except node rules, which may continue over
// following lines. `//` starts a comment; `///` lines document the
// declaration below them, here and in the generated Rust. Kind names are
// capitalized; declaration keywords are lowercase.
//
//   token Kind shape ["text"] ["description"] flags…
//       shape        trivia | ident | keyword "text" | punct "c" | literal | error
//       description  how the token reads after "expected" in a diagnostic;
//                    a keyword or punctuation token defaults to its text in
//                    backticks
//       flags        expr      can begin an expression
//                    stmt      begins a statement that is not an expression
//                    end       a statement can end after it
//                    item      begins a top-level item
//                    continue  continues the previous line's statement
//                              (operators need no flag: the tables below
//                              decide for them)
//   pair Opener Closer [statements]
//                               a bracket pair the token stream matches;
//                               `statements` when line breaks inside it end
//                               statements, as a block's do — every other
//                               pair suspends the newline rule
//   compound "text"             adjacent punctuation the parser glues into
//                               one operator; the lexer never produces it
//   prefix "text"               a prefix operator
//   binary Name "text" level    a binary operator; higher levels bind
//          [comparison]         tighter, every operator associates left,
//                               and comparisons do not chain
//   Node = rule                 a node kind and the shape of a valid one,
//                               in ungrammar notation: 'text' and Kind
//                               atoms, `?`, `*`, `|`, and parentheses.
//                               A rule that only lists other rules names a
//                               category and is not a node kind. The
//                               operator tables stand in for the implicit
//                               PrefixOperator and BinaryOperator rules.
//                               `label:` before a child names the accessor
//                               the typed views give it; an unlabeled
//                               child is named after its kind, and two
//                               children of one kind must be labeled.
//
// The `Error` node kind, covering tokens the parser could not parse, is
// implied: recovery needs it whatever the grammar says.

// ---------------------------------------------------------------- tokens

/// Horizontal whitespace.
token Whitespace trivia "whitespace"
/// One line break.
token Newline trivia "a line break"
token LineComment trivia "a line comment"

/// An identifier that is not a keyword: an ASCII letter or `_`, then
/// ASCII letters, digits, and `_`. Any other character has no meaning in
/// the language.
token Ident ident "a name" expr end
/// The identifier `_` on its own, reserved for discards.
token Underscore keyword "_" stmt end

// Reserved keywords. The v0 set covers functions, bindings, branching, and
// boolean literals only.
token ElseKw keyword "else" continue
token FalseKw keyword "false" expr end
/// A function item, or a closure where an expression is expected: the
/// same signature and body forms, without a name. Outside every matched
/// bracket pair a `fn` begins a top-level item, since no expression stands
/// there.
token FnKw keyword "fn" expr item
token IfKw keyword "if" expr
token LetKw keyword "let" stmt
token MutKw keyword "mut"
token ReturnKw keyword "return" stmt end
token TrueKw keyword "true" expr end

/// A decimal integer literal: a run of digits. There are no separators,
/// suffixes, or floats; trailing identifier characters attach as a suffix
/// for the lexer to reject, so `1_000` and `1e5` are each one error.
token IntLiteral literal "an integer literal" expr end
/// A string literal on one line: `"…"`, with escapes. A line break ends an
/// unterminated one, so a stray quote costs its line and nothing after it.
token StringLiteral literal "a string literal" expr end

// Punctuation, one kind per character. Punctuation without a role in the
// language (`;`, `[`, `@`, …) has no kind and lexes to `Error`.
token LParen punct "(" expr
token RParen punct ")" end
token LBrace punct "{" expr
token RBrace punct "}" end
token Comma punct ","
token Colon punct ":"
token Dot punct "."
token Eq punct "="
/// The comparison, spaced on both sides like every binary operator. Glued
/// to the identifier before it, `<` opens a list of type arguments, in
/// types, declarations, and expressions alike, so there is no turbofish:
/// `Vec<int>` and `parse<int>("3")` instantiate, `a < b` compares, and
/// `a<b` is an error, an unspaced comparison until generics exist and an
/// unclosed list after. That pair encloses no statements and suspends the
/// newline rule for nothing, so it is confined to its statement. Nothing
/// generic is built yet; the reading is decided so that the glued form
/// never becomes valid as a comparison.
token Lt punct "<"
/// The comparison, or the closer of a list of type arguments, which takes
/// one `>` at a time, so `>>` closes two. It continues a line as every
/// binary operator does, which lets a list close on its own line.
token Gt punct ">"
token Bang punct "!" expr
token Plus punct "+"
token Minus punct "-" expr
/// Multiplication, spaced on both sides. Glued to what follows, `*` is
/// reserved for a prefix operator, so `a*b` and a line beginning `*b`
/// stay errors until one exists.
token Star punct "*"
token Slash punct "/"
token Percent punct "%"
/// No role alone: `&&` is `and`. Glued to what follows, `&` is reserved
/// for a prefix operator.
token Amp punct "&"
token Pipe punct "|"

/// A token with no meaning in the language: unrecognized characters, a
/// byte-order mark included, and punctuation without a role.
token Error error "valid syntax" stmt end

// -------------------------------------------------------------- brackets

pair LParen RParen
pair LBrace RBrace statements

// ------------------------------------------------------------- operators

compound "->"
compound "=="
compound "!="
compound "<="
compound ">="
compound "&&"
compound "||"

prefix "-"
prefix "!"

binary Or "||" 1
binary And "&&" 2
binary Eq "==" 3 comparison
binary Ne "!=" 3 comparison
binary Lt "<" 3 comparison
binary Le "<=" 3 comparison
binary Gt ">" 3 comparison
binary Ge ">=" 3 comparison
binary Add "+" 4
binary Sub "-" 4
binary Mul "*" 5
binary Div "/" 5
binary Rem "%" 5

// ----------------------------------------------------------------- nodes

/// A source file contains function items, each beginning on a new line after
/// the first.
SourceFile = items:FnItem*

/// A function item. Its name begins on the same line as `fn`. The body is a
/// block or `=` and an expression: `fn double(x: int) -> int = x * 2`.
/// Signature components after the parameter list may begin on subsequent
/// lines.
FnItem = 'fn' Name ParamList ('->' ret:TypeRef)? '='? body:Expr
ParamList = '(' params:(Param (',' Param)* ','?)? ')'
/// A parameter. An item's has a type; a closure's may leave it to be
/// inferred.
Param = Name (':' TypeRef)?

/// A declaring occurrence of a name: what an item, a parameter, or a
/// binding introduces. A use is a NameRef.
Name = Ident

/// A type reference: a name, until types grow more shapes.
TypeRef = Ident

Block = '{' stmts:Stmt* '}'

/// One statement of a block; a line break ends it. Expression-statement
/// type requirements are enforced by semantic checking, not this grammar.
Stmt =
  LetStmt
| AssignStmt
| DiscardStmt
| ReturnStmt
| Expr

/// A binding statement. Its `let`, optional `mut`, and name share one line.
LetStmt = 'let' 'mut'? Name (':' TypeRef)? '=' initializer:Expr
AssignStmt = target:Expr '=' value:Expr
DiscardStmt = '_' '=' value:Expr
ReturnStmt = 'return' value:Expr?

Expr =
  NameRef
| LiteralExpr
| PrefixExpr
| BinaryExpr
| ParenExpr
| CallExpr
| IfExpr
| ClosureExpr
| Block

/// A use of a name: a reference to what a Name declared.
NameRef = Ident
LiteralExpr =
  IntLiteral
| StringLiteral
| 'true'
| 'false'
PrefixExpr = PrefixOperator operand:Expr
BinaryExpr = lhs:Expr BinaryOperator rhs:Expr
ParenExpr = '(' inner:Expr ')'
CallExpr = callee:Expr ArgList
ArgList = '(' args:(Expr (',' Expr)* ','?)? ')'
IfExpr = 'if' condition:Expr then_branch:Block ('else' else_branch:(IfExpr | Block))?
/// A function without a name, as an expression: `fn(x) = x * 2`, or
/// `fn(x: int) -> int { … }`, with an item's parameter list, return type,
/// and body forms.
ClosureExpr = 'fn' ParamList ('->' ret:TypeRef)? '='? body:Expr
