crates/syntax/src/parser.rs
//! Recursive descent over a [`ParserInput`], building a [`Parse`] through [`Marker`]s. Every rule
//! is total and makes progress, and the input horizon sits at the next item's start while an item
//! parses, so no rule or recovery reads past it.

use sumi_lexer::RawIdx;

use crate::ast::NodeKind as N;
use crate::grammar::{
    BinaryOp, PREFIX_BP, Pair, Side, SyntaxKind as T, binary_operator, bracket, can_end_statement,
    introduces_statement, is_closer, is_literal, is_opener, is_prefix_operator, starts_expression,
    starts_item, starts_statement,
};
use crate::input::ParserInput;
use crate::tree::{CompletedMarker, Marker, Parse, RecoveryHandle};

pub fn parse(input: ParserInput) -> Parse {
    Parse::build(input, source_file)
}

#[derive(Clone, Debug, PartialEq, Eq, Hash)]
pub enum ParseEvidence {
    Recovery(ParseRecovery),
    Violation(ParseViolation),
}

#[derive(Clone, Debug, PartialEq, Eq, Hash)]
pub struct ParseRecovery {
    pub kind: ParseRecoveryKind,
    pub anchor: ParseAnchor,
    pub skipped: Box<[RawTokenRange]>,
}

#[derive(Clone, Copy, Debug, PartialEq, Eq, Hash)]
pub enum ParseRecoveryKind {
    Item,
    Statement,
    Expression,
    Name,
    Type,
    Body,
    Token(T),
    /// `..`, which the lexer yields as two joint `.` tokens.
    RangeOperator,
    /// The anchor is the gap where the closer is missing.
    Closer {
        pair: Pair,
        opener: RawTokenRange,
    },
    Boundary,
    /// Garbage between an operand and what continues or ends its expression.
    Unexpected,
    NestingTooDeep,
    /// Skipped lexer `Error` tokens; the diagnostic is the lexer's.
    PriorPhaseError,
}

/// A rule broken by syntax the parser took as written, with no recovery.
#[derive(Clone, Copy, Debug, PartialEq, Eq, Hash)]
pub struct ParseViolation {
    pub kind: ParseViolationKind,
    pub range: RawTokenRange,
}

#[derive(Clone, Copy, Debug, PartialEq, Eq, Hash)]
pub enum ParseViolationKind {
    UnspacedBinaryOperator,
    SpacedPrefixOperator,
    SpacedListOpener,
    FunctionNameOnNextLine,
    FunctionItemOnSameLine,
    BindingNameOnNextLine,
    ChainedComparison,
}

#[derive(Clone, Copy, Debug, PartialEq, Eq, Hash)]
pub enum ParseAnchor {
    Gap(RawGap),
    Tokens(RawTokenRange),
}

/// Half-open and nonempty: `start < end`.
#[derive(Clone, Copy, Debug, PartialEq, Eq, Hash)]
pub struct RawTokenRange {
    start: RawIdx,
    end: RawIdx,
}

impl RawTokenRange {
    pub(crate) fn new(start: RawIdx, end: RawIdx) -> Self {
        assert!(start < end, "a raw token range must be nonempty");
        Self { start, end }
    }

    pub fn start(self) -> RawIdx {
        self.start
    }

    pub fn end(self) -> RawIdx {
        self.end
    }

    pub fn iter(self) -> impl DoubleEndedIterator<Item = RawIdx> + ExactSizeIterator {
        self.start.until(self.end)
    }
}

/// The trivia between two adjacent significant tokens, possibly empty; at a file edge, the leading
/// or trailing trivia.
#[derive(Clone, Copy, Debug, PartialEq, Eq, Hash)]
pub struct RawGap {
    trivia_start: RawIdx,
    trivia_end: RawIdx,
}

impl RawGap {
    pub(crate) fn new(trivia_start: RawIdx, trivia_end: RawIdx) -> Self {
        assert!(trivia_start <= trivia_end, "a raw gap cannot run backwards");
        Self {
            trivia_start,
            trivia_end,
        }
    }

    pub fn trivia_start(self) -> RawIdx {
        self.trivia_start
    }

    pub fn trivia_end(self) -> RawIdx {
        self.trivia_end
    }
}

/// The most open nodes an expression may sit inside; past it the rest is skipped, which bounds the
/// parser's stack.
pub const MAX_DEPTH: u32 = 256;

fn source_file(p: &mut Marker<'_, '_>) {
    let item_candidate = |p: &Marker<'_, '_>| {
        (p.at(T::FnKw) || begins_headless_item(p)) && !p.is_in_matched_delimiters()
    };
    let mut item_ends_here = false;
    for anchor in 0..=p.item_anchor_count() {
        p.set_limit(p.item_anchor(anchor));
        if anchor > 0 {
            // An anchor is an item's head, with or without its `fn`.
            let has_fn = p.at(T::FnKw);
            if item_ends_here && has_fn && !p.is_after_newline() {
                p.violation(ParseViolationKind::FunctionItemOnSameLine, 1);
            }
            fn_item(p);
            item_ends_here = has_fn;
        }
        while p.current().is_some() {
            if item_candidate(p) {
                fn_item(p);
                item_ends_here = false;
            } else {
                let recovery = p.recover_tokens(ParseRecoveryKind::Item, 1);
                skip_all(p, recovery, item_candidate);
                item_ends_here = false;
            }
        }
    }
}

/// Takes at least one token. A matched bracket pair is taken whole, so `stop` is never asked inside
/// one.
fn skip(
    p: &mut Marker<'_, '_>,
    recovery: RecoveryHandle,
    stop: impl Fn(&Marker<'_, '_>) -> bool,
) -> CompletedMarker {
    let mut m = p.start();
    m.group();
    while let Some(kind) = m.current() {
        let closer = is_closer(kind) && m.has_partner();
        if closer || stop(&m) {
            break;
        }
        m.group();
    }
    let skipped = m.covered_range();
    m.skipped(recovery, skipped);
    m.complete(N::Error)
}

fn skip_token(p: &mut Marker<'_, '_>, recovery: RecoveryHandle) -> CompletedMarker {
    let mut m = p.start();
    m.token();
    let skipped = m.covered_range();
    m.skipped(recovery, skipped);
    m.complete(N::Error)
}

fn skip_statement_garbage(p: &mut Marker<'_, '_>, recovery: RecoveryHandle) -> CompletedMarker {
    let mut m = p.start();
    m.group_inside();
    while !(m.current().is_none()
        || m.is_at_boundary()
        || m.current().is_some_and(introduces_statement)
        || (m.at(T::RBrace) && !m.has_closer_ahead())
        || m.closes_open_bracket())
    {
        m.group_inside();
    }
    let skipped = m.covered_range();
    m.skipped(recovery, skipped);
    m.complete(N::Error)
}

/// `skip` repeated past the partnered closers it stops at: nothing encloses the run here, so they
/// are garbage too.
fn skip_all(
    p: &mut Marker<'_, '_>,
    recovery: RecoveryHandle,
    stop: impl Fn(&Marker<'_, '_>) -> bool,
) {
    while p.current().is_some() && !stop(p) {
        skip(p, recovery, &stop);
    }
}

fn fn_item(p: &mut Marker<'_, '_>) {
    let mut m = p.start();
    let has_fn = m.at(T::FnKw);
    if has_fn {
        m.token();
    } else {
        m.missing(ParseRecoveryKind::Token(T::FnKw));
    }
    if !m.at(T::Ident) && !m.at(T::Underscore) {
        let recovery = m.missing(ParseRecoveryKind::Name);
        signature_garbage(&mut m, recovery, |m| {
            m.at(T::Ident) || m.at(T::Underscore) || m.at(T::LParen)
        });
    }
    let is_name_missing = if m.at(T::Ident) || m.at(T::Underscore) {
        if has_fn && m.at(T::Ident) && m.is_after_newline() {
            m.violation(ParseViolationKind::FunctionNameOnNextLine, 1);
        }
        name(&mut m);
        if m.at(T::LParen) && !m.is_after_newline() && !m.is_joint_before() {
            m.violation(ParseViolationKind::SpacedListOpener, 1);
        }
        false
    } else {
        true
    };
    signature_tail(&mut m, is_name_missing);
    m.complete(N::FnItem);
}

fn signature_tail(m: &mut Marker<'_, '_>, is_name_missing: bool) {
    let allow_list_newline = is_name_missing;
    if !m.at(T::LParen) || (m.is_after_newline() && !allow_list_newline) {
        let recovery = m.missing(ParseRecoveryKind::Token(T::LParen));
        signature_garbage(m, recovery, |m| m.at(T::LParen) || is_nth_arrow(m, 0));
    }
    let mut is_complete = false;
    if m.at(T::LParen) && (!m.is_after_newline() || allow_list_newline) {
        delimited_list::<Params>(m, 1);
        is_complete = true;
    }
    let body_begins = |m: &Marker<'_, '_>, is_complete: bool| {
        m.at(T::LBrace) || is_at_expression_body(m, is_complete)
    };
    if !body_begins(m, is_complete) && !is_nth_arrow(m, 0) {
        let recovery = m.missing(ParseRecoveryKind::Body);
        signature_garbage(m, recovery, |m| {
            is_nth_arrow(m, 0) || is_at_expression_body(m, is_complete)
        });
    }
    if is_nth_arrow(m, 0) {
        m.token();
        m.token();
        is_complete = m.at(T::Ident);
        type_ref(m, 2);
        if !body_begins(m, is_complete) {
            let recovery = m.missing(ParseRecoveryKind::Body);
            signature_garbage(m, recovery, |m| is_at_expression_body(m, is_complete));
        }
    }
    if is_at_expression_body(m, is_complete) {
        m.token();
        if let Some(body) = operand_before(m, 0, ExprFollow::Anything) {
            m.field(&body, 3);
        }
    } else if m.at(T::LBrace) {
        let body = block(m);
        m.field(&body, 3);
    }
}

/// `return` can end a statement, but a signature right after it is its value, not an item.
fn begins_headless_item(m: &Marker<'_, '_>) -> bool {
    m.previous()
        .is_none_or(|previous| can_end_statement(previous) && previous != T::ReturnKw)
        && m.is_at_headless_signature()
}

/// `is_complete`: a signature part stands right before. Elsewhere in a signature a `=` is garbage, so
/// it never makes an expression body of what follows it.
fn is_at_expression_body(m: &Marker<'_, '_>, is_complete: bool) -> bool {
    is_complete && m.at(T::Eq) && m.nth(1).is_some_and(starts_expression) && !is_nth_arrow(m, 1)
}

fn is_nth_arrow(m: &Marker<'_, '_>, n: usize) -> bool {
    m.nth(n) == Some(T::Minus) && m.is_nth_joint(n) && m.nth(n + 1) == Some(T::Gt)
}

/// A `{` the stream never pairs, where a signature part was expected, is garbage, not the body.
fn signature_garbage(
    m: &mut Marker<'_, '_>,
    recovery: RecoveryHandle,
    resume: impl Fn(&Marker<'_, '_>) -> bool,
) {
    let stop = |m: &Marker<'_, '_>| {
        resume(m) || m.is_after_newline() || (m.at(T::LBrace) && m.has_partner())
    };
    skip_all(m, recovery, stop);
}

/// `_` is a `Name` with a recovery inside: it reads as a name and binds nothing.
fn name(p: &mut Marker<'_, '_>) {
    if p.at(T::Ident) {
        let name = leaf(p, N::Name);
        p.field(&name, 0);
    } else if p.at(T::Underscore) {
        let mut m = p.start();
        m.recover_tokens(ParseRecoveryKind::Name, 1);
        m.token();
        let name = m.complete(N::Name);
        p.field(&name, 0);
    } else {
        p.missing(ParseRecoveryKind::Name);
    }
}

fn type_ref(p: &mut Marker<'_, '_>, field: u8) {
    if p.at(T::Ident) {
        let mut m = p.start();
        m.token();
        let ty = m.complete(N::TypeRef);
        p.field(&ty, field);
    } else {
        p.missing(ParseRecoveryKind::Type);
    }
}

trait ListRule {
    const NODE: N;
    const PAIR: Pair;
    const ELEMENT: ParseRecoveryKind;
    const RESUMES_AT_ELEMENT: bool;
    fn starts_element(m: &Marker<'_, '_>) -> bool;
    fn parse_element(m: &mut Marker<'_, '_>);
    fn follows(m: &Marker<'_, '_>) -> bool;
    /// Whether this kind may follow an element with no `,` before it.
    fn is_tolerated(kind: T) -> bool;
}

struct Params;

impl ListRule for Params {
    const NODE: N = N::ParamList;
    const PAIR: Pair = Pair::Paren;
    const ELEMENT: ParseRecoveryKind = ParseRecoveryKind::Name;
    // A name in the garbage is likelier the body's, after a `{` standing where the `)` should, than
    // a parameter's.
    const RESUMES_AT_ELEMENT: bool = false;

    fn starts_element(m: &Marker<'_, '_>) -> bool {
        m.at(T::Ident) || m.at(T::Underscore)
    }

    fn parse_element(m: &mut Marker<'_, '_>) {
        param(m);
    }

    /// A brace the stream never pairs is garbage in the list, not what follows it.
    fn follows(m: &Marker<'_, '_>) -> bool {
        (m.at(T::LBrace) || m.at(T::RBrace)) && m.has_partner()
    }

    fn is_tolerated(kind: T) -> bool {
        kind == T::LBrace
    }
}

struct Args;

impl ListRule for Args {
    const NODE: N = N::ArgList;
    const PAIR: Pair = Pair::Paren;
    const ELEMENT: ParseRecoveryKind = ParseRecoveryKind::Expression;
    const RESUMES_AT_ELEMENT: bool = true;

    fn starts_element(m: &Marker<'_, '_>) -> bool {
        m.starts_expression()
    }

    fn parse_element(m: &mut Marker<'_, '_>) {
        operand(m);
    }

    fn follows(m: &Marker<'_, '_>) -> bool {
        m.at(T::RBrace)
    }

    fn is_tolerated(_: T) -> bool {
        false
    }
}

fn delimited_list<R: ListRule>(p: &mut Marker<'_, '_>, field: u8) {
    let close = R::PAIR.closer().kind();
    let mut m = p.open(R::PAIR);
    loop {
        match m.current() {
            None => {
                m.missing_closer(R::PAIR);
                break;
            }
            Some(kind) if kind == close && m.owns_closer(R::PAIR) => {
                m.token();
                break;
            }
            Some(kind) if kind == close && m.closes_open(R::PAIR) => {
                m.missing_closer(R::PAIR);
                break;
            }
            Some(_) if !m.is_closed() && R::follows(&m) && !is_displaced_closer(&m) => {
                m.missing_closer(R::PAIR);
                break;
            }
            Some(T::Comma) => {
                m.missing(R::ELEMENT);
                m.token();
            }
            // Parsed as an element, an unpaired opener would take the closer with it.
            Some(kind) if is_opener(kind) && !m.has_partner() && m.nth(1) == Some(close) => {
                let recovery = m.recover_tokens(R::ELEMENT, 1);
                skip_token(&mut m, recovery);
            }
            Some(_) if R::starts_element(&m) => R::parse_element(&mut m),
            Some(_) => {
                let recovery = m.recover_tokens(R::ELEMENT, 1);
                skip(&mut m, recovery, |m| {
                    m.at(T::Comma)
                        || m.at(close)
                        || (!m.is_closed() && (m.is_at_boundary() || R::follows(m)))
                        || (R::RESUMES_AT_ELEMENT && begins_element::<R>(m))
                });
                // The garbage stood where an element should, so no `,` is missing.
                if R::RESUMES_AT_ELEMENT && begins_element::<R>(&m) {
                    continue;
                }
            }
        }
        // A list the stream closes owns every boundary through its closer; only an unclosed one
        // ends at its line.
        if !m.is_closed() && m.is_at_boundary() {
            m.missing_closer(R::PAIR);
            break;
        }
        if m.at(T::Comma) {
            m.token();
        } else if !m
            .current()
            .is_none_or(|kind| is_closer(kind) || starts_item(kind) || R::is_tolerated(kind))
        {
            m.missing(ParseRecoveryKind::Token(T::Comma));
        }
    }
    let list = m.complete(R::NODE);
    p.field(&list, field);
}

/// An opener the stream never closes began nothing and is garbage like the rest.
fn begins_element<R: ListRule>(m: &Marker<'_, '_>) -> bool {
    R::starts_element(m)
        && m.current()
            .is_some_and(|kind| !is_opener(kind) || m.has_partner())
}

fn param(p: &mut Marker<'_, '_>) {
    let mut m = p.start();
    name(&mut m);
    if m.at(T::Colon) && !m.is_at_boundary() {
        m.token();
        type_ref(&mut m, 1);
    } else {
        m.missing(ParseRecoveryKind::Token(T::Colon));
        if m.at(T::Ident) {
            type_ref(&mut m, 1);
        }
    }
    m.complete(N::Param);
}

fn block(p: &mut Marker<'_, '_>) -> CompletedMarker {
    let mut m = p.open(Pair::Brace);
    loop {
        match m.current() {
            None => {
                m.missing_closer(Pair::Brace);
                break;
            }
            Some(T::RBrace) if !m.has_closer_ahead() => {
                m.token();
                break;
            }
            Some(_) if m.closes_open_bracket() => {
                m.missing_closer(Pair::Brace);
                break;
            }
            Some(_) => {
                let recovery = m.recovery_checkpoint();
                statement(&mut m);
                let failed = m.recovered_since(recovery);
                let ends = m.current().is_none()
                    || m.is_at_boundary()
                    || (m.at(T::RBrace)
                        && !m.has_closer_ahead()
                        && !(failed && is_displaced_closer(&m)))
                    || m.closes_open_bracket();
                if !ends {
                    // After a failed statement, an expression start on its line is ambiguous with
                    // the statement's suffix; only an introducer is new.
                    if failed && !m.current().is_some_and(introduces_statement) {
                        let recovery = m
                            .latest_recovery_since(recovery)
                            .expect("a failed statement has recovery evidence");
                        skip_statement_garbage(&mut m, recovery);
                    } else if !failed && m.current().is_some_and(starts_statement) {
                        m.missing(ParseRecoveryKind::Boundary);
                    }
                }
            }
        }
    }
    m.complete(N::Block)
}

fn statement(p: &mut Marker<'_, '_>) {
    match p.current() {
        Some(T::LetKw) => let_stmt(p),
        Some(T::Underscore) => discard_stmt(p),
        Some(T::ReturnKw) => return_stmt(p),
        // A named function where a statement belongs is an item, not a statement.
        Some(T::FnKw)
            if !p.is_nth_after_newline(1) && matches!(p.nth(1), Some(T::Ident | T::Underscore)) =>
        {
            let recovery = p.recover_tokens(ParseRecoveryKind::Statement, 1);
            skip_statement_garbage(p, recovery);
        }
        Some(T::Error) => {
            let mut m = p.start();
            while m.at(T::Error) {
                m.token();
            }
            let skipped = m.covered_range();
            let recovery = m.recover_range(ParseRecoveryKind::PriorPhaseError, skipped);
            m.skipped(recovery, skipped);
            m.complete(N::Error);
        }
        _ => {
            let recovery = p.recovery_checkpoint();
            if let Some(lhs) = expr_bp(p, 0, ExprFollow::Anything) {
                if !p.recovered_since(recovery) && p.at(T::Eq) && !p.is_at_boundary() {
                    let lhs_node = p.completed_node(&lhs);
                    let mut m = p.precede(lhs);
                    m.token();
                    let value = operand(&mut m);
                    m.wrapped_field(lhs_node, 0);
                    if let Some(value) = &value {
                        m.field(value, 1);
                    }
                    m.complete(N::AssignStmt);
                }
            } else {
                let recovery = p.recover_tokens(ParseRecoveryKind::Statement, 1);
                skip_statement_garbage(p, recovery);
            }
        }
    }
}

fn let_stmt(p: &mut Marker<'_, '_>) {
    let mut m = p.start();
    m.token();
    let mut split_head = m.is_after_newline();
    if m.at(T::MutKw) {
        m.token();
        split_head |= m.is_after_newline();
    }
    if split_head && m.at(T::Ident) {
        m.violation(ParseViolationKind::BindingNameOnNextLine, 1);
    }
    name(&mut m);
    if m.at(T::Colon) && !m.is_at_boundary() {
        m.token();
        type_ref(&mut m, 1);
    }
    if m.expect(T::Eq)
        && let Some(initializer) = operand(&mut m)
    {
        m.field(&initializer, 2);
    }
    m.complete(N::LetStmt);
}

fn discard_stmt(p: &mut Marker<'_, '_>) {
    let mut m = p.start();
    m.token();
    if m.expect(T::Eq)
        && let Some(value) = operand(&mut m)
    {
        m.field(&value, 0);
    }
    m.complete(N::DiscardStmt);
}

fn return_stmt(p: &mut Marker<'_, '_>) {
    let mut m = p.start();
    m.token();
    if !m.is_at_boundary()
        && m.starts_expression()
        && let Some(value) = operand(&mut m)
    {
        m.field(&value, 0);
    }
    m.complete(N::ReturnStmt);
}

fn operand(p: &mut Marker<'_, '_>) -> Option<CompletedMarker> {
    operand_before(p, 0, ExprFollow::Anything)
}

fn operand_before(
    p: &mut Marker<'_, '_>,
    min_bp: u8,
    follow: ExprFollow,
) -> Option<CompletedMarker> {
    if follow == ExprFollow::Range && p.at(T::Dot) {
        p.missing(ParseRecoveryKind::Expression);
        return None;
    }
    if let Some(expression) = expr_bp(p, min_bp, follow) {
        return Some(expression);
    }
    let displaced = !p.is_after_newline() && displaces_expression(p);
    let recovery = if displaced {
        p.recover_tokens(ParseRecoveryKind::Expression, 1)
    } else {
        p.missing(ParseRecoveryKind::Expression)
    };
    if !displaced {
        return None;
    }
    skip(p, recovery, |p| {
        p.is_after_newline() || p.at(T::Comma) || begins_statement(p)
    });
    if !p.is_after_newline() && begins_expression(p) {
        expr_bp(p, min_bp, follow)
    } else {
        None
    }
}

fn closes_expression_bracket(kind: T) -> bool {
    matches!(bracket(kind), Some((pair, Side::Close)) if !pair.encloses_statements())
}

/// An opener the stream never closes began nothing and is garbage like the rest.
fn begins_expression(p: &Marker<'_, '_>) -> bool {
    p.current()
        .is_some_and(|kind| starts_expression(kind) && (!is_opener(kind) || p.has_partner()))
}

fn begins_statement(p: &Marker<'_, '_>) -> bool {
    begins_expression(p) || p.current().is_some_and(introduces_statement)
}

fn displaces_expression(p: &Marker<'_, '_>) -> bool {
    if p.current().is_some_and(is_closer) {
        if p.closes_open_bracket() {
            return false;
        }
        return is_displaced_closer(p)
            || (p.current().is_some_and(closes_expression_bracket) && !p.has_partner());
    }
    p.current()
        .is_some_and(|kind| kind == T::Error || !(starts_statement(kind) || kind == T::Comma))
}

/// Asked only after the enclosing construct has taken its own expected closer.
fn is_displaced_closer(p: &Marker<'_, '_>) -> bool {
    if !p.current().is_some_and(is_closer) || p.is_nth_after_newline(1) {
        return false;
    }
    if binary_op(p, 1).is_some() {
        return false;
    }
    // An opener may continue the operand instead: a call, or a body.
    p.nth(1).is_some_and(|next| {
        matches!(next, T::Eq | T::Colon)
            || introduces_statement(next)
            || (starts_expression(next) && !is_opener(next))
    })
}

fn is_garbage_in_expression(p: &Marker<'_, '_>, follow: ExprFollow) -> bool {
    p.at(T::Error)
        || (p.current().is_some_and(closes_expression_bracket) && !p.closes_open_bracket())
        || (follow == ExprFollow::Anything && p.at(T::LBrace))
        || p.current().is_some_and(|kind| {
            !starts_statement(kind)
                && !matches!(kind, T::Eq | T::Comma | T::ElseKw)
                && !is_closer(kind)
                && !starts_item(kind)
                && binary_op(p, 0).is_none()
        })
}

#[derive(Clone, Copy, PartialEq, Eq)]
enum ExprFollow {
    Anything,
    Block,
    Range,
}
